--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="description" content="Portfolio de de François croizer, developpeur web junior.">
+    <title>Portfolio de François Croizer</title>
   </head>
   <body>
     <div id="app"></div>
