--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio de de François croizer, developpeur web junior.">
     <title>Portfolio de François Croizer</title>
